Fix a11y colour contrast bug #2332

--- a/src/shared-components/site-header/_index.scss
+++ b/src/shared-components/site-header/_index.scss
@@ -23,7 +23,7 @@ $_white-box-width-not-narrow: 280px;
 
     @include states.link() {
       background-color: settings.$colour-furniture;
-      color: var(--colour-text-navigation-link);
+      color: settings.$colour-dark-background;
     }
   }
 }
